fix: add styles for modal and knob overflow

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -72,6 +72,7 @@
   height: 100%;
   max-height: 35rem;
   transition: transform $duration--moderate-01 carbon--motion('entrance');
+  padding-bottom: 3rem; //needed for demos that have a lot of knobs, the ones closest to the fade-out are unclickable without
   @include carbon--breakpoint('md') {
     position: static;
     box-shadow: none;
@@ -204,4 +205,11 @@ fieldset.form-group {
     $theme: $carbon--theme--g100,
     $emit-custom-properties: true
   );
+}
+
+//---------------------------------------
+// Demo modal
+//---------------------------------------
+.container :global(.bx--modal) {
+  z-index: 99999;
 }
